--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -1,16 +1,22 @@
 [tool.poetry]
 name = "fastapi-socis"
 version = "0.1.0"
-description = ""
+description = "API per facilitar la gestió de l'associació."
+authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
-uvicorn = "^0.17.6"
+python = "^3.8"
 fastapi = "^0.78.0"
-SQLAlchemy = "^1.4.37"
-pydantic = "^1.9.1"
+uvicorn = "^0.17.6"
+pydantic = {extras = ["email"], version = "^1.9.1"}
+SQLAlchemy = "^1.4.36"
+alembic = "^1.8.0"
+bcrypt = "^3.2.2"
+python-dateutil = "^2.8.2"
 
 [tool.poetry.dev-dependencies]
+pdbpp = "^0.10.3"
+ipython = "^8.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
